--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,11 +2,12 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "lais",
-    "password": "Users123",
+    "username": "postgres",
+    "password": "030602",
     "database": "users",
     "entities": [
-        "src/domain/models/**/*.ts"
+        "src/address/address.entity.ts",
+        "src/users/user.entity.ts"
     ],
     "synchronize": true
 }
